<resources>
    <string name="app_name">Real Estate</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signupinfo">Register with us by providing basic contact details like phone number and email address. Create an account to start listing your properties.</string>
    <string name="listpropertyinfo">You can list one or more properties based on the category and sub-categories by following few simple steps.</string>
    <string name="getnotified">Get notified with the contact details of the interested party and monitor the views and favourites. </string>
    <string name="signup">Sign-Up</string>
    <string name="listproperty">List Property</string>
    <string name="sellproperty">Sell Your Property</string>
    <string name="getstarted">GET STARTED</string>
    <string name="login">Login</string>
    <string name="getotp">Get Otp</string>
    <string name="emailaddress">Email Address or Phone</string>
    <string name="password">Password</string>
    <string name="entermobile">Enter mobile number</string>
    <string name="enterpassword">Enter password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="createaaccount">CREATE AN ACCOUNT</string>
    <string name="createaccountheader">CREATE ACCOUNT</string>
    <string name="name">Name</string>
    <string name="enterfullname">Enter your Full Name</string>
    <string name="phone">Phone</string>
    <string name="enterphonenum">Enter phone number</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="otpvalidfor">OTP Valid for </string>
    <string name="proceed">Proceed</string>
    <string name="alreadyasaccount">Already has a account?</string>
    <string name="submit">SUBMIT</string>
    <string name="forgotpasswheader">FORGOT PASSWORD</string>
    <string name="congrats">Congratulations!!</string>
    <string name="congratsinfo">You are all set to start listing your properties</string>
    <string name="enterotp">Enter OTP</string>
    <string name="home">Home</string>
    <string name="myaccount">My Account</string>
    <string name="postaproperty">Post a Property</string>
    <string name="allproperties">All Properties</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="postnewproperty">POST NEW PROPERTY</string>
    <string name="logintype">mobile_number</string>
    <string name="errorLogin">There is some problem in network, Can u please try again </string>
    <string name="signin">SignIn</string>
    <string name="invalidOtp">Invalid Otp</string>
    <string name="selectloc">Select Location</string>
    <string name="api_key">AIzaSyD3Dh9p2T3Oghmdmdbbj7sQL50isgbefag</string>
    <string name="propertytype">PropertyType</string>
    <string name="agriculture">Agriculture</string>
    <string name="openplots">Open Plots</string>
    <string name="commericial">Commercial</string>
    <string name="residence">Residence</string>
    <string name="nextstep">Next Step</string>
    <string name="strfarmland">Farm Land</string>
    <string name="price">Price</string>
    <string name="enteramount">"Amount"</string>
    <string name="entervillage">Village</string>
    <string name="entercity">City/Town</string>
    <string name="entermandal">Mandal</string>
    <string name="enterdistrict">District</string>
    <string name="enterstate">State</string>
    <string name="extent">Extent</string>
    <string name="guntas">Guntas</string>
    <string name="sqyards">SQ Yards</string>
    <string name="typeofapproach">Type Of Approach Road</string>
    <string name="approacroad">Approach Road Width</string>
    <string name="feets">Feets</string>
    <string name="offerprice">Offer Price</string>
    <string name="lakhs">Lakhs</string>
    <string name="crores">Crores</string>
    <string name="marketprice">Nearby Prevailing Market Price</string>
    <string name="fieldpartnercode">Field Partner Code(Optional)</string>
    <string name="nameofowner">Name Of the Owner</string>
    <string name="contactphone">Contact Phone Number (Primary)</string>
    <string name="contactphonealt">Contact Phone Number (Alternative)(Optional)</string>
    <string name="descalt">Description(Optional)</string>
    <string name="highlights">HighLights</string>
    <string name="sitebest">Location Proximity</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="reserveforest">Near By Reserve Forest</string>
    <string name="security">24 Hours Security</string>
    <string name="solarfencing">Solar Fencing</string>
    <string name="neartohospital">Near to Hospitals</string>
    <string name="neartopolicestation">Near to Police Station</string>
    <string name="neartotown">Near to Town</string>
    <string name="neartolocalvillage">Near to Local Village</string>
    <string name="neartomarket">Near to Market</string>
    <string name="neartowaterprojects">Near to water Projects</string>
    <string name="waterbodynearby">Any other Water body famous nearby</string>
    <string name="neartoresorts">Near to resorts</string>
    <string name="neartonh">Near to NH</string>
    <string name="neartopond">Near to River or pond</string>
    <string name="neartoground">Near To Ground</string>
    <string name="charges">"Charges for property posting is Rs.2000 + Rs.360(18% GST) for 30 days listing "</string>
    <string name="paypost"><![CDATA[Pay & Post Your Property]]></string>
    <string-array name="terms">
        <item>i.To access the service provided by Right My Property, you must create an Account by completing the registration process.</item>
        <item>ii.By registering you represent that you are a major and that if you are registering on behalf of a person or entity, you are authorized to register for the Service.</item>
        <item>iii.You agree that you may be charged a nominal fee for registering on the website and to access the services provided by it.</item>
        <item>iv.The information which is provided by you is true and that you have not misrepresented any information.</item>
        <item>v.You agree that pictures, location and orientation of the house, floor plans, water availability as provided by the Seller shall be shared to the Buyers.</item>
        <item>vi.You acknowledge that certain information like phone number and name shall be shared with third parties for performing physical visits or acquiring Revenue records and the same shall be done so within reasonable limits of the scope of this Agreement.</item>
        <item>vii.You agree that you shall notify Right My Property at the earliest instance possible of any possible breach of the account data or unauthorized access. To protect such information, you are advised to change the password from time to time and Right My Property shall not be held responsible for any mischief arising due to the carelessness of the seller or any data breach from your side.</item>
        <item>viii.You undertake to use the website only for the purposes intended for and shall not commit any act that jeopardizes the information provided by any other user.</item>
        <item>ix.You undertake not to put up any listing that can be construed as harassment, religious, racial hatred, obscenity, or of any other inconvenience of any nature.</item>
        <item>x.You agree that in the event of violation of any of the terms mentioned hereunder, Right My Property reserves the right to suspend or deactivate your account and you forfeit the payment made towards any subscription plans.</item>
        <item>xi.You shall not post any deep linking or provide access to any content that is not expressly provided by Right My Property and Right My Property reserves the right to take down such violations.</item>
        <item>xii.You shall not to copy, modify, reverse engineer, decompile, disassemble, create derivative works of the website nor attempt to locate or obtain its source code.</item>
        <item>xiii.You undertake to correspond and use the username, password and phone number provided by you at the time of registration to communicate with the representatives to facilitate easy access to your account and details.</item>
    </string-array>
    <string name="strflat">Flat</string>
    <string name="strnameofproject">Name of the Project / Venture (Optional)</string>
    <string name="facing">Facing</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gatedcommunity">Is it a Gated Community?</string>
    <string name="plintharea">Plinth Area</string>
    <string name="sqfeets">SFTS</string>
    <string name="numoffloors">Number of Floors</string>
    <string name="floornumber">Floor Number</string>
    <string name="str_village_locality">Village/Locality</string>
    <string name="str_city_town">City/Town</string>
    <string name="str_mandal">Mandal</string>
    <string name="str_district">District</string>
    <string name="str_state">State</string>
    <string name="str_type_of_approach_road">Type of Approach Road</string>
    <string name="str_approach_road_width">Approach Road Width</string>
    <string name="str_offer_price">Offer Price</string>
    <string name="str_crores">Crores</string>
    <string name="str_lakhs">Lakhs</string>
    <string name="str_nearby_market_price">Nearby Prevailing Market Place</string>
    <string name="str_field_partner_code">Field Partner Code</string>
    <string name="str_name_of_owner">Name of the owner</string>
    <string name="str_contact_number_primary">Contact Phone Number(Primary)</string>
    <string name="str_contact_number_alternative">Contact Phone Number(Alternative)</string>
    <string name="str_description">Description</string>
    <string name="str_feets">Feets</string>
    <string name="str_max_1024_characters">(Max 1024 Characters)</string>
    <string name="str_sqyrds">SQRYDS</string>
    <string name="str_facing">Facing</string>
    <string name="str_agriculture">Agriculture</string>
    <string name="str_residential">Residential</string>
    <string name="str_commercial">Commercial/ Industrial</string>
    <string name="str_agricultural_land">Agricultural Land</string>
    <string name="str_farm_house">Farm House</string>
    <string name="str_plots">Plots</string>
    <string name="str_flats">Flats</string>
    <string name="str_villas_houses">Villas / Houses</string>
    <string name="str_open_spaces">Open Spaces</string>
    <string name="str_buildings">Buildings</string>
    <string name="str_property_type">Property type</string>
    <string name="str_name_of_venture">Name of the Project / Venture (Optional)</string>
    <string name="str_is_gated_community">Is it a gated community?</string>
    <string name="str_suitable_for">Suitable for</string>
    <string name="str_sfts">SFTS</string>
    <string name="str_plinth_area">Plinth Area</string>
    <string name="str_floor_numbers">Number of Floors</string>
    <string name="str_floor_number">Floor Number</string>
    <string name="str_number_of_bedrooms">Number of Bedrooms</string>
    <string name="str_no_of_bathrooms">Number of Bathrooms</string>
    <string name="str_years">Years</string>
    <string name="str_inr">₹</string>
    <string name="str_approax_rental_value">Approax Rental Value</string>
    <string name="str_plot_area">PlotArea</string>
    <string name="str_age_of_the_building">Age of the Building</string>
</resources>