<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/home"
                android:title="@string/home"/>
        <item
                android:id="@+id/nav_myaccount"
                android:icon="@drawable/myaccount"
                android:title="@string/myaccount"/>
        <item
                android:id="@+id/nav_postproperty"
                android:icon="@drawable/ic_postproperty"
                android:title="@string/postaproperty"/>
        <item
                android:id="@+id/nav_allproperties"
                android:icon="@drawable/ic_allproperties"
                android:title="@string/allproperties"/>

        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
        <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help"/>

        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>

    </group>
</menu>