<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvCategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/size_10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/str_property_type"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_tab_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCategoryTitle"
        app:tabMode="fixed"
        app:tabPaddingEnd="0dp"
        app:tabPaddingStart="0dp"
        app:tabTextAppearance="@style/TabItemTheme">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_agriculture"
            android:text="@string/str_agriculture" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_house"
            android:text="@string/str_residential" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_commercial"
            android:text="@string/str_commercial" />

    </com.google.android.material.tabs.TabLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/rgAgriculture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlCategories"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/rbAgricultureLand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/str_agricultural_land"
            app:chipBackgroundColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/rbFarmHouse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/str_farm_house"
            app:chipBackgroundColor="@color/white" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/rgResidential"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlCategories"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/rbPlots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/str_plots"
            app:chipBackgroundColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/rbFlats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/str_flats"
            app:chipBackgroundColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/rbVillas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/str_villas_houses"
            app:chipBackgroundColor="@color/white" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/rgCommercial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlCategories"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/rbOpenSpaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/str_open_spaces"
            app:chipBackgroundColor="@color/white" />

        <com.google.android.material.chip.Chip
            android:id="@+id/rbBuildings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:text="@string/str_buildings"
            app:chipBackgroundColor="@color/white" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>